--- a/template/templates/add-reservation.html
+++ b/template/templates/add-reservation.html
@@ -29,7 +29,7 @@
     </div>
 
 <hr />
-    <div class="form-group row">
+    <div class="form-group row" id="reservation" data-hidebefore="guest">
       <div class="col-sm-2 col-form-label"><strong>Reservation</strong></div>
       <div class="form-group col-md-2">
         <label for="persons">Persons</label>
@@ -90,7 +90,7 @@
 
 
 
-    <div class="row" style="padding:10px;">
+    <div class="row" style="padding:10px;" id="add_options"  data-hidebefore="guest">
       <button class="btn btn-primary ">Save Reservation</button> <a href="#reservations/overview" role="button" class="btn btn-light">Back to Overview</a>
     </div>
   </form>
