Christoffel : reservation overview,view, update & delete fixes

--- a/template/templates/delete-reservation.html
+++ b/template/templates/delete-reservation.html
@@ -1,4 +1,4 @@
-<h3>View Reservation</h3><hr />
+<h3>Delete Reservation</h3><hr />
 <div class="row">
   <div class="col-sm-2"><strong>Guest</strong></div>
   <div class="col-sm-4" id="guest"></div>
@@ -9,5 +9,5 @@
   <div class="col-sm-10" id="reservation"></div>
 </div>
 <div class="row" style="padding:10px;" id="delete_options">
-  <button class="btn btn-primary ">Edit Reservation</button> <a href="#reservations/overview" role="button" class="btn btn-light">Back to Overview</a>
+  <button class="btn btn-primary ">Delete Reservation</button> <a href="#reservations/overview" role="button" class="btn btn-light">Back to Overview</a>
 </div>
