--- a/template/templates/update-reservation.html
+++ b/template/templates/update-reservation.html
@@ -6,7 +6,7 @@
         <label for="firstname">First name</label>
         <input type="text" class="form-control" id="firstname" autocomplete="off" placeholder="First name">
       </div>
-      <div class="form-group col-md-2">
+      <div class="form-group col-md-2" id="col_preposition">
         <label for="preposition">Preposition</label>
         <input type="text" class="form-control" id="preposition" autocomplete="off" placeholder="Preposition">
       </div>
@@ -17,15 +17,18 @@
     </div>
     <div class="form-group row">
       <div class="col-sm-2 col-form-label"></div>
-      <div class="form-group col-md-5">
+      <div class="form-group col-md-5" id="col_email">
         <label for="email">E-mail</label>
         <input type="text" class="form-control" id="email" autocomplete="off" placeholder="E-mail">
       </div>
 
-      <div class="form-group col-md-5">
+      <div class="form-group col-md-5"  id="col_telephone">
         <label for="telephone">Telephone</label>
         <input type="text" class="form-control" id="telephone" autocomplete="off" placeholder="Telephone">
       </div>
+    </div>
+    <div class="row" style="padding:10px;" id="add_options"  data-hidebefore="guest">
+      <button class="btn btn-outline" id="edit_guest">Edit Guest Details</button> 
     </div>
 
 <hr />
