--- a/template/templates/update-reservation.html
+++ b/template/templates/update-reservation.html
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div class="row" style="padding:10px;" id="add_options"  data-hidebefore="guest">
-      <button class="btn btn-outline" id="edit_guest">Edit Guest Details</button> 
+      <a role="button" class="btn btn-outline" id="edit_guest">Edit Guest Details</a>
     </div>
 
 <hr />
@@ -94,6 +94,6 @@
 
 
     <div class="row" style="padding:10px;" id="add_options"  data-hidebefore="guest">
-      <button class="btn btn-primary ">Save Reservation</button> <a href="#reservations/overview" role="button" class="btn btn-light">Back to Overview</a>
+      <button class="btn btn-primary ">Save Reservation</button> <a href="#reservations/overview" role="button" class="btn btn-light overview-link">Back to Overview</a>
     </div>
   </form>
