--- a/template/templates/view-reservation.html
+++ b/template/templates/view-reservation.html
@@ -1,13 +1,14 @@
 <h3>View Reservation</h3><hr />
 <div class="row">
-  <div class="col-sm-2"><strong>Guest</strong></div>
-  <div class="col-sm-4" id="guest"></div>
-  <div class="col-sm-6" id="guest_delete"><input type="checkbox" id="checkbox_delete_guest" checked /><label for="checkbox_delete_guest">Delete Guest data</label></div>
-</div>
-<div class="row">
-  <div class="col-sm-2"><strong>Reservation</strong></div>
-  <div class="col-sm-10" id="reservation"></div>
+  <div class="card">
+  <h5 class="card-header">Reservation for <span id="guest"></span></h5>
+  <div class="card-body">
+
+    <p class="card-text" id="reservation"></p>
+
+  </div>
+  </div>
 </div>
 <div class="row" style="padding:10px;" id="delete_options">
-  <button class="btn btn-primary ">Edit Reservation</button> <a href="#reservations/overview" role="button" class="btn btn-light">Back to Overview</a>
+  <button class="btn btn-primary ">Edit Reservation</button> <a href="#reservations/overview" role="button" class="btn btn-light overview-link">Back to Overview</a>
 </div>
