--- a/template/templates/delete-reservation.html
+++ b/template/templates/delete-reservation.html
@@ -11,5 +11,5 @@
 </div>
 
 <div class="row" style="padding:10px;" id="delete_options">
-  <button class="btn btn-primary ">Delete Reservation</button> <a href="#reservations/overview" role="button" class="btn btn-light overview-link">Back to Overview</a>
+  <button class="btn btn-primary "><i class="fas fa-minus-circle"></i> Delete Reservation</button> <a href="#reservations/overview" role="button" class="btn btn-light overview-link">Back to Overview</a>
 </div>
