--- a/template/templates/add-reservation.html
+++ b/template/templates/add-reservation.html
@@ -1,7 +1,7 @@
 <h3>Add Reservation</h3><hr />
   <form>
     <div class="form-group row">
-      <div class="col-sm-2 col-form-label"><strong>Guest</strong></div>
+      <div class="col-sm-2 col-form-label"><strong><i class="fas fa-user"></i> Guest</strong></div>
       <div class="form-group col-md-4">
         <label for="firstname">First name</label>
         <input type="text" class="form-control" id="firstname" autocomplete="off" placeholder="First name">
@@ -30,11 +30,8 @@
 
 <hr />
     <div class="form-group row" id="reservation" data-hidebefore="guest">
-      <div class="col-sm-2 col-form-label"><strong>Reservation</strong></div>
-      <div class="form-group col-md-2">
-        <label for="persons">Persons</label>
-        <input type="number" class="form-control" id="persons" autocomplete="off" placeholder="Persons">
-      </div>
+      <div class="col-sm-2 col-form-label"><strong><i class="far fa-calendar"></i> Reservation</strong></div>
+
       <div class="form-group col-md-2">
         <label for="date">Date</label>
         <input type="text" class="form-control" id="date" autocomplete="off" placeholder="Date">
@@ -48,6 +45,10 @@
       <div class="form-group col-md-2">
         <label for="time_depart">Time Depart</label>
         <input type="text" class="form-control" id="time_depart" autocomplete="off" data-provide="timepicker" placeholder="Time Depart">
+      </div>
+      <div class="form-group col-md-2">
+        <label for="persons">Persons</label>
+        <input type="number" class="form-control" id="persons" autocomplete="off" placeholder="Persons">
       </div>
       <div class="form-group col-md-2">
         <label for="table_select">Table</label>
@@ -91,6 +92,6 @@
 
 
     <div class="row" style="padding:10px;" id="add_options"  data-hidebefore="guest">
-      <button class="btn btn-primary ">Save Reservation</button> <a href="#reservations/overview" role="button" class="btn btn-light">Back to Overview</a>
+      <button class="btn btn-primary ">Save Reservation</button> <a href="#reservations/overview" role="button" class="btn btn-light"><i class="fas fa-list"></i> Back to Overview</a>
     </div>
   </form>
