--- a/template/templates/edit-reservation.html
+++ b/template/templates/edit-reservation.html
@@ -1,7 +1,7 @@
 <h3>Edit Reservation</h3><hr />
   <form>
     <div class="form-group row">
-      <div class="col-sm-2 col-form-label"><strong>Guest</strong></div>
+      <div class="col-sm-2 col-form-label"><strong><i class="fas fa-user"></i> Guest</strong></div>
       <div class="form-group col-md-4">
         <label for="firstname">First name</label>
         <input type="text" class="form-control" id="firstname" autocomplete="off" placeholder="First name">
@@ -30,7 +30,7 @@
 
 <hr />
     <div class="form-group row" id="reservation" data-hidebefore="guest">
-      <div class="col-sm-2 col-form-label"><strong>Reservation</strong></div>
+      <div class="col-sm-2 col-form-label"><strong><i class="far fa-calendar"></i> Reservation</strong></div>
       <div class="form-group col-md-2">
         <label for="persons">Persons</label>
         <input type="number" class="form-control" id="persons" autocomplete="off" placeholder="Persons">
