--- a/template/templates/update-reservation.html
+++ b/template/templates/update-reservation.html
@@ -1,7 +1,7 @@
 <h3>Edit Reservation</h3><hr />
   <form>
     <div class="form-group row">
-      <div class="col-sm-2 col-form-label"><strong>Guest</strong></div>
+      <div class="col-sm-2 col-form-label"><strong><i class="fas fa-user"></i> Guest</strong></div>
       <div class="form-group col-md-4">
         <label for="firstname">First name</label>
         <input type="text" class="form-control" id="firstname" autocomplete="off" placeholder="First name">
@@ -15,7 +15,7 @@
         <input type="text" class="form-control" id="lastname" autocomplete="off" placeholder="Last name">
       </div>
     </div>
-    <div class="form-group row">
+    <div class="form-group row" id="row_guest_contact_details">
       <div class="col-sm-2 col-form-label"></div>
       <div class="form-group col-md-5" id="col_email">
         <label for="email">E-mail</label>
@@ -28,31 +28,32 @@
       </div>
     </div>
     <div class="row" style="padding:10px;" id="add_options"  data-hidebefore="guest">
-      <a role="button" class="btn btn-outline" id="edit_guest">Edit Guest Details</a>
+      <a role="button" class="btn btn-outline" id="edit_guest"><i class="far fa-edit"></i> Edit Guest Details</a>
     </div>
 
 <hr />
-    <div class="form-group row" id="reservation" data-hidebefore="guest">
-      <div class="col-sm-2 col-form-label"><strong>Reservation</strong></div>
-      <div class="form-group col-md-2">
-        <label for="persons">Persons</label>
-        <input type="number" class="form-control" id="persons" autocomplete="off" placeholder="Persons">
-      </div>
-      <div class="form-group col-md-2">
+    <div class="form-group row" id="reservation">
+      <div class="col-sm-2 col-form-label"><strong><i class="far fa-calendar"></i> Reservation</strong></div>
+
+      <div class="form-group col-md-2"  id="col_date">
         <label for="date">Date</label>
         <input type="text" class="form-control" id="date" autocomplete="off" placeholder="Date">
       </div>
-      <div class="form-group col-md-2">
+      <div class="form-group col-md-2"  id="col_time_arrival">
         <label for="time_arrival">Time Arrival</label>
 
           <input type="text" class="form-control" id="time_arrival" autocomplete="off" data-provide="timepicker" placeholder="Time Arrival">
 
       </div>
-      <div class="form-group col-md-2">
+      <div class="form-group col-md-2"  id="col_time_depart">
         <label for="time_depart">Time Depart</label>
         <input type="text" class="form-control" id="time_depart" autocomplete="off" data-provide="timepicker" placeholder="Time Depart">
       </div>
-      <div class="form-group col-md-2">
+      <div class="form-group col-md-2" id="col_persons">
+        <label for="persons">Persons</label>
+        <input type="number" class="form-control" id="persons" autocomplete="off" placeholder="Persons">
+      </div>
+      <div class="form-group col-md-2" id="col_table_select">
         <label for="table_select">Table</label>
         <select multiple class="form-control" id="table_select">
           <option value="1">1</option>
@@ -94,6 +95,6 @@
 
 
     <div class="row" style="padding:10px;" id="add_options"  data-hidebefore="guest">
-      <button class="btn btn-primary ">Save Reservation</button> <a href="#reservations/overview" role="button" class="btn btn-light overview-link">Back to Overview</a>
+      <button class="btn btn-primary ">Save Reservation</button> <a href="#reservations/overview" role="button" class="btn btn-light overview-link"><i class="fas fa-list"></i> Back to Overview</a>
     </div>
   </form>
