--- a/template/pages/reservations.html
+++ b/template/pages/reservations.html
@@ -1,23 +1,25 @@
-<header class="page-header">
-  <h2>Manage Reservations</h2>
-  <nav id="page-navigation">
-    <ul class="nav nav-tabs">
-      <li class="nav-item">
-        <a class="nav-link active" href="#reservations/overview"><i class="fas fa-list"></i> Overview</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#reservations/add"><i class="fas fa-plus"></i> Add a Reservation</a>
-      </li>
-    </ul>
-  </nav>
-</header>
+<div>
+  <header class="page-header">
+    <h2>Manage Reservations</h2>
+    <nav id="page-navigation">
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link active" href="#reservations/overview"><i class="fas fa-list"></i> Overview</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#reservations/add"><i class="fas fa-plus"></i> Add a Reservation</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-<article class="page-content">
-  <section id="page_output">
-    <!-- page content -->
-  </section>
-</article>
+  <article class="page-content">
+    <section id="page_output">
+      <!-- page content -->
+    </section>
+  </article>
 
-<footer class="page-footer">
+  <footer class="page-footer">
 
-</footer>
+  </footer>
+</div>
