--- a/template/templates/add-reservation.html
+++ b/template/templates/add-reservation.html
@@ -1,97 +1,99 @@
-<h3>Add Reservation</h3><hr />
-  <form>
-    <div class="form-group row">
-      <div class="col-sm-2 col-form-label"><strong><i class="fas fa-user"></i> Guest</strong></div>
-      <div class="form-group col-md-4">
-        <label for="firstname">First name</label>
-        <input type="text" class="form-control" id="firstname" autocomplete="off" placeholder="First name">
+<div>
+  <h3>Add Reservation</h3><hr />
+    <form>
+      <div class="form-group row">
+        <div class="col-sm-2 col-form-label"><strong><i class="fas fa-user"></i> Guest</strong></div>
+        <div class="form-group col-md-4">
+          <label for="firstname">First name</label>
+          <input type="text" class="form-control" id="firstname" autocomplete="off" placeholder="First name"/>
+        </div>
+        <div class="form-group col-md-2">
+          <label for="preposition">Preposition</label>
+          <input type="text" class="form-control" id="preposition" autocomplete="off" placeholder="Preposition"/>
+        </div>
+        <div class="form-group col-md-4">
+          <label for="lastname">Last name</label>
+          <input type="text" class="form-control" id="lastname" autocomplete="off" placeholder="Last name"/>
+        </div>
       </div>
-      <div class="form-group col-md-2">
-        <label for="preposition">Preposition</label>
-        <input type="text" class="form-control" id="preposition" autocomplete="off" placeholder="Preposition">
-      </div>
-      <div class="form-group col-md-4">
-        <label for="lastname">Last name</label>
-        <input type="text" class="form-control" id="lastname" autocomplete="off" placeholder="Last name">
-      </div>
-    </div>
-    <div class="form-group row">
-      <div class="col-sm-2 col-form-label"></div>
-      <div class="form-group col-md-5">
-        <label for="email">E-mail</label>
-        <input type="text" class="form-control" id="email" autocomplete="off" placeholder="E-mail">
+      <div class="form-group row">
+        <div class="col-sm-2 col-form-label"></div>
+        <div class="form-group col-md-5">
+          <label for="email">E-mail</label>
+          <input type="text" class="form-control" id="email" autocomplete="off" placeholder="E-mail"/>
+        </div>
+
+        <div class="form-group col-md-5">
+          <label for="telephone">Telephone</label>
+          <input type="text" class="form-control" id="telephone" autocomplete="off" placeholder="Telephone"/>
+        </div>
       </div>
 
-      <div class="form-group col-md-5">
-        <label for="telephone">Telephone</label>
-        <input type="text" class="form-control" id="telephone" autocomplete="off" placeholder="Telephone">
+  <hr />
+      <div class="form-group row" id="reservation" data-hidebefore="guest">
+        <div class="col-sm-2 col-form-label"><strong><i class="far fa-calendar"></i> Reservation</strong></div>
+
+        <div class="form-group col-md-2">
+          <label for="date">Date</label>
+          <input type="text" class="form-control" id="date" autocomplete="off" placeholder="Date"/>
+        </div>
+        <div class="form-group col-md-2">
+          <label for="time_arrival">Time Arrival</label>
+
+            <input type="text" class="form-control" id="time_arrival" autocomplete="off" data-provide="timepicker" placeholder="Time Arrival"/>
+
+        </div>
+        <div class="form-group col-md-2">
+          <label for="time_depart">Time Depart</label>
+          <input type="text" class="form-control" id="time_depart" autocomplete="off" data-provide="timepicker" placeholder="Time Depart"/>
+        </div>
+        <div class="form-group col-md-2">
+          <label for="persons">Persons</label>
+          <input type="number" class="form-control" id="persons" autocomplete="off" placeholder="Persons"/>
+        </div>
+        <div class="form-group col-md-2">
+          <label for="table_select">Table</label>
+          <select multiple="multiple" class="form-control" id="table_select">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
+            <option value="6">6</option>
+            <option value="7">7</option>
+            <option value="8">8</option>
+            <option value="9">9</option>
+            <option value="10">10</option>
+            <option value="11">11</option>
+            <option value="12">12</option>
+            <option value="13">13</option>
+            <option value="14">14</option>
+            <option value="15">15</option>
+            <option value="16">16</option>
+            <option value="17">17</option>
+            <option value="18">18</option>
+            <option value="19">19</option>
+            <option value="20">20</option>
+            <option value="21">21</option>
+            <option value="22">22</option>
+            <option value="23">23</option>
+            <option value="24">24</option>
+            <option value="25">25</option>
+            <option value="26">26</option>
+            <option value="27">27</option>
+            <option value="28">28</option>
+            <option value="29">29</option>
+            <option value="30">30</option>
+          </select>
+        </div>
       </div>
-    </div>
 
-<hr />
-    <div class="form-group row" id="reservation" data-hidebefore="guest">
-      <div class="col-sm-2 col-form-label"><strong><i class="far fa-calendar"></i> Reservation</strong></div>
 
-      <div class="form-group col-md-2">
-        <label for="date">Date</label>
-        <input type="text" class="form-control" id="date" autocomplete="off" placeholder="Date">
+
+
+
+      <div class="row" style="padding:10px;" id="add_options"  data-hidebefore="guest">
+        <button class="btn btn-primary ">Save Reservation</button> <a href="#reservations/overview" role="button" class="btn btn-light"><i class="fas fa-list"></i> Back to Overview</a>
       </div>
-      <div class="form-group col-md-2">
-        <label for="time_arrival">Time Arrival</label>
-
-          <input type="text" class="form-control" id="time_arrival" autocomplete="off" data-provide="timepicker" placeholder="Time Arrival">
-
-      </div>
-      <div class="form-group col-md-2">
-        <label for="time_depart">Time Depart</label>
-        <input type="text" class="form-control" id="time_depart" autocomplete="off" data-provide="timepicker" placeholder="Time Depart">
-      </div>
-      <div class="form-group col-md-2">
-        <label for="persons">Persons</label>
-        <input type="number" class="form-control" id="persons" autocomplete="off" placeholder="Persons">
-      </div>
-      <div class="form-group col-md-2">
-        <label for="table_select">Table</label>
-        <select multiple class="form-control" id="table_select">
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5</option>
-          <option value="6">6</option>
-          <option value="7">7</option>
-          <option value="8">8</option>
-          <option value="9">9</option>
-          <option value="10">10</option>
-          <option value="11">11</option>
-          <option value="12">12</option>
-          <option value="13">13</option>
-          <option value="14">14</option>
-          <option value="15">15</option>
-          <option value="16">16</option>
-          <option value="17">17</option>
-          <option value="18">18</option>
-          <option value="19">19</option>
-          <option value="20">20</option>
-          <option value="21">21</option>
-          <option value="22">22</option>
-          <option value="23">23</option>
-          <option value="24">24</option>
-          <option value="25">25</option>
-          <option value="26">26</option>
-          <option value="27">27</option>
-          <option value="28">28</option>
-          <option value="29">29</option>
-          <option value="30">30</option>
-        </select>
-      </div>
-    </div>
-
-
-
-
-
-    <div class="row" style="padding:10px;" id="add_options"  data-hidebefore="guest">
-      <button class="btn btn-primary ">Save Reservation</button> <a href="#reservations/overview" role="button" class="btn btn-light"><i class="fas fa-list"></i> Back to Overview</a>
-    </div>
-  </form>
+    </form>
+</div>
