martijn: add overview ingredient

--- a/template/pages/ingredients.html
+++ b/template/pages/ingredients.html
@@ -13,7 +13,7 @@
 </header>
 
 <article class="page-content">
-  <section>
+  <section id="page_output">
     <!-- page content -->
   </section>
 </article>
