Rob: Insert a table + overview added

--- a/template/pages/tables.html
+++ b/template/pages/tables.html
@@ -1,15 +1,19 @@
 <header class="page-header">
   <h2>Manage Tables</h2>
   <nav id="page-navigation">
-    <ul>
-      <li class="current"><a href="#">Overview</a></li>
-      <li><a href="#">Insert New Table...</a></li>
+    <ul class="nav nav-tabs">
+      <li class="nav-item">
+        <a class="nav-link active" href="#tables/overview"><i class="fas fa-list"></i> Overview</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#tables/add"><i class="fas fa-plus"></i> Add a Table</a>
+      </li>
     </ul>
   </nav>
 </header>
 
 <article class="page-content">
-  <section>
+  <section id="page_output">
     <!-- page content -->
   </section>
 </article>
