--- a/template/templates/add-table.html
+++ b/template/templates/add-table.html
@@ -3,11 +3,11 @@
     <div class="form-group row">
       <div class="form-group col-md-2">
         <label for="table_id">Table nr.</label>
-        <input type="number" class="form-control" id="table_id" autocomplete="off" placeholder="">
+        <input type="number" min="1" max="999" class="form-control" id="table_id" autocomplete="off" placeholder="">
       </div>
       <div class="form-group col-md-2">
         <label for="chairs">Chair amount</label>
-        <input type="number" class="form-control" id="chairs" autocomplete="off" placeholder="4">
+        <input type="number" min="0" max="24" class="form-control" id="chairs" autocomplete="off" placeholder="4">
       </div>
       <div class="form-group col-md-2">
         <label for="wheelchair">Wheelchair accessible</label>
