--- a/template/templates/add-ingredient.html
+++ b/template/templates/add-ingredient.html
@@ -4,16 +4,16 @@
       <div class="form-group row">
         <div class="col-sm-2 col-form-label"><strong><i class="fas fa-user"></i> Guest</strong></div>
         <div class="form-group col-md-4">
-          <label for="firstname">First name</label>
-          <input type="text" class="form-control" id="firstname" autocomplete="off" placeholder="First name"/>
+          <label for="name">Name</label>
+          <input type="text" class="form-control" id="name" autocomplete="off" placeholder="Name"/>
         </div>
         <div class="form-group col-md-2">
-          <label for="preposition">Preposition</label>
-          <input type="text" class="form-control" id="preposition" autocomplete="off" placeholder="Preposition"/>
+          <label for="unit">Unit</label>
+          <input type="text" class="form-control" id="unit" autocomplete="off" placeholder="Unit"/>
         </div>
         <div class="form-group col-md-4">
-          <label for="lastname">Last name</label>
-          <input type="text" class="form-control" id="lastname" autocomplete="off" placeholder="Last name"/>
+          <label for="price">Price</label>
+          <input type="number" class="form-control" id="price" autocomplete="off" placeholder="Price"/>
         </div>
       </div>
       <div class="form-group row">
