--- a/template/templates/add-ingredient.html
+++ b/template/templates/add-ingredient.html
@@ -2,98 +2,35 @@
   <h3>Add Ingredient</h3><hr />
     <form>
       <div class="form-group row">
-        <div class="col-sm-2 col-form-label"><strong><i class="fas fa-user"></i> Guest</strong></div>
-        <div class="form-group col-md-4">
+        <div class="col-sm-2 col-form-label"><strong><i class="fas fa-archive"></i> Ingredient</strong></div>
+        <div class="form-group col-md-2">
           <label for="name">Name</label>
           <input type="text" class="form-control" id="name" autocomplete="off" placeholder="Name"/>
         </div>
-        <div class="form-group col-md-2">
-          <label for="unit">Unit</label>
-          <input type="text" class="form-control" id="unit" autocomplete="off" placeholder="Unit"/>
-        </div>
-        <div class="form-group col-md-4">
+      </div>
+      <div class="form-group row">
+        <div class="form-group col-md-1">
           <label for="price">Price</label>
           <input type="number" class="form-control" id="price" autocomplete="off" placeholder="Price"/>
         </div>
-      </div>
-      <div class="form-group row">
-        <div class="col-sm-2 col-form-label"></div>
-        <div class="form-group col-md-5">
-          <label for="email">E-mail</label>
-          <input type="text" class="form-control" id="email" autocomplete="off" placeholder="E-mail"/>
+        <div class="form-group col-md-0.5">
+          <label>per</label>
         </div>
-
-        <div class="form-group col-md-5">
-          <label for="telephone">Telephone</label>
-          <input type="text" class="form-control" id="telephone" autocomplete="off" placeholder="Telephone"/>
+        <div class="form-group col-md-1">
+          <label for="unit">Unit</label>
+          <input type="text" class="form-control" id="unit" autocomplete="off" placeholder="Unit"/>
         </div>
-      </div>
-
-  <hr />
-      <div class="form-group row" id="ingredient" data-hidebefore="guest">
-        <div class="col-sm-2 col-form-label"><strong><i class="far fa-calendar"></i> Ingredient</strong></div>
-
-        <div class="form-group col-md-2">
-          <label for="date">Date</label>
-          <input type="text" class="form-control" id="date" autocomplete="off" placeholder="Date"/>
+        <div class="form-group col-md-3">
+          <label for="category">Category</label>
+          <input type="text" class="form-control" id="category" autocomplete="off" placeholder="Category"/>
         </div>
-        <div class="form-group col-md-2">
-          <label for="time_arrival">Time Arrival</label>
-
-            <input type="text" class="form-control" id="time_arrival" autocomplete="off" data-provide="timepicker" placeholder="Time Arrival"/>
-
-        </div>
-        <div class="form-group col-md-2">
-          <label for="time_depart">Time Depart</label>
-          <input type="text" class="form-control" id="time_depart" autocomplete="off" data-provide="timepicker" placeholder="Time Depart"/>
-        </div>
-        <div class="form-group col-md-2">
-          <label for="persons">Persons</label>
-          <input type="number" class="form-control" id="persons" autocomplete="off" placeholder="Persons"/>
-        </div>
-        <div class="form-group col-md-2">
-          <label for="table_select">Table</label>
-          <select multiple="multiple" class="form-control" id="table_select">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
-            <option value="11">11</option>
-            <option value="12">12</option>
-            <option value="13">13</option>
-            <option value="14">14</option>
-            <option value="15">15</option>
-            <option value="16">16</option>
-            <option value="17">17</option>
-            <option value="18">18</option>
-            <option value="19">19</option>
-            <option value="20">20</option>
-            <option value="21">21</option>
-            <option value="22">22</option>
-            <option value="23">23</option>
-            <option value="24">24</option>
-            <option value="25">25</option>
-            <option value="26">26</option>
-            <option value="27">27</option>
-            <option value="28">28</option>
-            <option value="29">29</option>
-            <option value="30">30</option>
-          </select>
+        <div class="form-group col-md-3">
+          <label for="allergies">Allergies</label>
+          <input type="text" class="form-control" id="allergies" autocomplete="off" placeholder="Allergies"/>
         </div>
       </div>
-
-
-
-
-
       <div class="row" style="padding:10px;" id="add_options"  data-hidebefore="guest">
-        <button class="btn btn-primary ">Save Ingredient</button> <a href="#ingredients/overview" role="button" class="btn btn-light"><i class="fas fa-list"></i> Back to Overview</a>
+        <button class="btn btn-primary">Save Ingredient</button> <a href="#ingredients/overview" role="button" class="btn btn-light"><i class="fas fa-list"></i> Back to Overview</a>
       </div>
     </form>
 </div>
