--- a/template/assets/css/molveno_styles.css
+++ b/template/assets/css/molveno_styles.css
@@ -4,14 +4,18 @@
 
 html {
   min-height: 100%;
-  background: url("../images/Molveno_logo_small.png") no-repeat;
+  background: #f7f6f2 url("../images/Molveno_logo_small.png") no-repeat;
   background-position: right 16px bottom 16px;
+}
+body {
+  background: none;
 }
 
 html,body {
-  background-color: #f7f6f2;
   font-family: 'Open Sans', sans-serif;
 }
+
+
 
 nav#primary {
   height: 100%;
