--- a/template/pages/dashboard.html
+++ b/template/pages/dashboard.html
@@ -1,19 +1,30 @@
-<header class="page-header">
-  <h2>Dashboard</h2>
-  <nav id="page-navigation">
-    <ul>
-      <li class="current"><a href="#">Dashboard</a></li>
-    </ul>
-  </nav>
-</header>
+<section class="page dashboard">
 
-<article class="page-content">
-  <section>
-    <h1>Welcome</h1>
-    <p>Start managing by choosing an option on the left.</p>
-  </section>
-</article>
+  <header class="page-header">
+    <h2>Dashboard</h2>
+    <nav id="page-navigation">
+      <ul>
+        <li class="current"><a href="#">Dashboard</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<footer class="page-footer">
+  <article class="page-content">
+    <section>
+      <h1>Welcome</h1>
+      <p>Start managing by choosing an option on the left.</p>
+    </section>
+  </article>
 
-</footer>
+  <footer class="page-footer page-content">
+    <div class="row">
+      <div class="col-sm-8 footer-content">
+        <!-- Some footer content can be placed here. -->
+      </div>
+      <div class="col-sm-4 footer-branding">
+        <h1 class="site-branding">Molveno Lake Resort</h1>
+      </div>
+    </div>
+  </footer>
+
+</section>
