--- a/template/pages/invoices.html
+++ b/template/pages/invoices.html
@@ -1,23 +1,33 @@
+<section class="page invoices">
 
-<header class="page-header">
-  <h2>Invoices</h2>
-  <nav id="page-navigation">
-    <ul>
+  <header class="page-header">
+    <h2>Invoices</h2>
+    <nav id="page-navigation">
+      <ul>
 
-      <li class="current"><a href="#invoice">Invoice</a></li>
+        <li class="current"><a href="#invoice">Invoice</a></li>
 
 
-    </ul>
-  </nav>
-</header>
+      </ul>
+    </nav>
+  </header>
 
-<article class="page-content">
-  <section id="page_output" class="print">
+  <article class="page-content">
+    <section id="page_output" class="print">
 
-  </section>
-  <button class="btn btn-primary btn-print">Print Invoice</button>
-</article>
+    </section>
+    <button class="btn btn-primary btn-print">Print Invoice</button>
+  </article>
 
-<footer class="page-footer">
+  <footer class="page-footer page-content">
+    <div class="row">
+      <div class="col-sm-8 footer-content">
+        <!-- Some footer content can be placed here. -->
+      </div>
+      <div class="col-sm-4 footer-branding">
+        <h1 class="site-branding">Molveno Lake Resort</h1>
+      </div>
+    </div>
+  </footer>
 
-</footer>
+</section>
