--- a/template/pages/reservations.html
+++ b/template/pages/reservations.html
@@ -1,4 +1,5 @@
-<div>
+<section class="page reservations">
+
   <header class="page-header">
     <h2>Manage Reservations</h2>
     <nav id="page-navigation">
@@ -19,7 +20,15 @@
     </section>
   </article>
 
-  <footer class="page-footer">
-
+  <footer class="page-footer page-content">
+    <div class="row">
+      <div class="col-sm-8 footer-content">
+        <!-- Some footer content can be placed here. -->
+      </div>
+      <div class="col-sm-4 footer-branding">
+        <h1 class="site-branding">Molveno Lake Resort</h1>
+      </div>
+    </div>
   </footer>
-</div>
+
+</section>
