--- a/template/pages/ingredients.html
+++ b/template/pages/ingredients.html
@@ -1,23 +1,34 @@
-<header class="page-header">
-  <h2>Manage Ingredients</h2>
-  <nav id="page-navigation">
-    <ul class="nav nav-tabs">
-      <li class="nav-item">
-        <a class="nav-link active" href="#ingredients/overview"><i class="fas fa-list"></i> Overview</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#ingredients/add"><i class="fas fa-plus"></i> Add Ingredient</a>
-      </li>
-    </ul>
-  </nav>
-</header>
+<section class="page ingredients">
 
-<article class="page-content">
-  <section id="page_output">
-    <!-- page content -->
-  </section>
-</article>
+  <header class="page-header">
+    <h2>Manage Ingredients</h2>
+    <nav id="page-navigation">
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a class="nav-link active" href="#ingredients/overview"><i class="fas fa-list"></i> Overview</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#ingredients/add"><i class="fas fa-plus"></i> Add Ingredient</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-<footer class="page-footer">
+  <article class="page-content">
+    <section id="page_output">
+      <!-- page content -->
+    </section>
+  </article>
 
-</footer>
+  <footer class="page-footer page-content">
+    <div class="row">
+      <div class="col-sm-8 footer-content">
+        <!-- Some footer content can be placed here. -->
+      </div>
+      <div class="col-sm-4 footer-branding">
+        <h1 class="site-branding">Molveno Lake Resort</h1>
+      </div>
+    </div>
+  </footer>
+
+</section>
