--- a/template/templates/add-ingredient.html
+++ b/template/templates/add-ingredient.html
@@ -11,7 +11,7 @@
       <div class="form-group row">
         <div class="form-group col-md-1">
           <label for="price">Price</label>
-          <input type="number" class="form-control" id="price" autocomplete="off" placeholder="Price"/>
+          <input type="number" step="0.01" class="form-control" id="price" autocomplete="off" placeholder="Price"/>
         </div>
         <div class="form-group col-md-0.5">
           <label>per</label>
