--- a/assets/css/molveno_styles.css
+++ b/assets/css/molveno_styles.css
@@ -15,7 +15,24 @@ html,body {
   font-family: 'Open Sans', sans-serif;
 }
 
-
+button:focus,
+a:focus, a:active,
+button::-moz-focus-inner,
+input[type="reset"]::-moz-focus-inner,
+input[type="button"]::-moz-focus-inner,
+input[type="submit"]::-moz-focus-inner,
+select::-moz-focus-inner,
+input[type="file"] > input[type="button"]::-moz-focus-inner {
+  outline: none !important;
+}
+select:-moz-focusring {
+  color: transparent;
+  text-shadow: 0 0 0 #000;
+}
+select:focus::-ms-value {
+  background-color: $input-bg;
+  color: $input-color;
+}
 
 nav#primary {
   height: 100%;
@@ -176,6 +193,10 @@ main#page {
   }
     #page-navigation ul.nav-tabs > li.nav-item a.nav-link {
       height: 39px !important;
+
+    }
+    #page-navigation ul.nav-tabs > li.nav-item a.nav-link:focus {
+      border: none;
     }
     #page-navigation ul.nav-tabs > li.nav-item a.nav-link.active {
       background-color: #f7f6f2 !important;
