Christoffel: update reservation

--- a/templates/delete-reservation.html
+++ b/templates/delete-reservation.html
@@ -1,9 +1,11 @@
 <h3>Delete Reservation</h3><hr />
-<div class="row">
-  <div class="card">
-  <h5 class="card-header">Reservation for <span id="guest"></span></h5>
-  <div class="card-body">
 
+<div class="row">
+
+  <div class="card">
+  <h5 class="card-header">Are you sure you want to delete this reservation?</h5>
+  <div class="card-body">
+    Reservation for <strong id="guest"></strong>
     <p class="card-text" id="reservation"></p>
 
   </div>
