--- a/templates/edit-ingredient.html
+++ b/templates/edit-ingredient.html
@@ -1,5 +1,5 @@
 <div>
-  <h3>Add Ingredient</h3><hr />
+  <h3>Edit Ingredient</h3><hr />
     <form>
       <div class="form-group row">
         <div class="col-sm-2 col-form-label"><strong><i class="fas fa-archive"></i> Ingredient</strong></div>
@@ -29,8 +29,8 @@
           <input type="text" class="form-control" id="allergies" autocomplete="off" placeholder="Allergies"/>
         </div>
       </div>
-      <div class="row" style="padding:10px;" id="add_options"  data-hidebefore="guest">
-        <button class="btn btn-primary">Save Ingredient</button> <a href="#ingredients/overview" role="button" class="btn btn-light"><i class="fas fa-list"></i> Back to Overview</a>
+      <div class="row" style="padding:10px;" id="add_options">
+        <button class="btn btn-primary">Save Ingredient</button> <a href="#ingredients/overview" role="button" class="btn btn-light overview-link"><i class="fas fa-list"></i> Back to Overview</a>
       </div>
     </form>
 </div>
