--- a/templates/add-table.html
+++ b/templates/add-table.html
@@ -7,7 +7,7 @@
       </div>
       <div class="form-group col-sm-6 col-md-3">
         <label for="chairs">Chair amount</label>
-        <input type="number" min="0" max="24" class="form-control" id="chairs" autocomplete="off" placeholder="4">
+        <input type="number" min="0" max="24" class="form-control" id="chairs" autocomplete="off" value="4">
       </div>
       <div class="form-group col-sm-6 col-md-3">
         <label for="wheelchair">Wheelchair Access</label>
