--- a/templates/delete-table.html
+++ b/templates/delete-table.html
@@ -1,15 +1,6 @@
-<h3>Delete Table</h3><hr />
-<div class="row">
-  <div class="card">
-  <h5 class="card-header">Table nr. <span id="table_id"></span></h5>
-  <div class="card-body">
-
-    <p class="card-text" id="table"></p>
-
-  </div>
-  </div>
-</div>
+<h3>Delete Table <span class="delete_table_id"></h3><hr />
+<p>You're about to delete Table <span class="delete_table_id"></span>. This action can't be undone. Are you sure?</p>
 
 <div class="row" style="padding-top:15px;" id="delete_options">
-  <button class="btn btn-primary "><i class="fas fa-minus-circle"></i> Delete Table</button> <a href="#tables/overview" role="button" class="btn btn-light overview-link">Back to Overview</a>
+  <button class="btn btn-primary "><i class="fas fa-minus-circle"></i> Yes, delete Table <span class="delete_table_id"></button> <a href="#tables/overview" role="button" class="btn btn-light overview-link">No, back to Overview</a>
 </div>
