--- a/templates/update-table.html
+++ b/templates/update-table.html
@@ -1,9 +1,9 @@
-<h3>Add Table</h3><hr />
+<h3>Edit Table <span id="h2_title_id">.</span></h3><hr />
   <form>
     <div class="form-group row">
-      <div class="form-group col-sm-6 col-md-3">
-        <label for="id">Table nr.</label>
-        <input type="number" min="1" max="999" class="form-control" id="id" autocomplete="off" placeholder="">
+      <div class="form-group col-hidden">
+        <label for="id">Table nr. </label>
+        <input type="number" min="1" max="999" class="form-control" id="id" autocomplete="off" placeholder="" disabled="disabled">
       </div>
       <div class="form-group col-sm-6 col-md-3">
         <label for="chairs">Chair amount</label>
