Christoffel : reservations bugfix #1

--- a/templates/add-reservation.html
+++ b/templates/add-reservation.html
@@ -3,18 +3,23 @@
     <form>
       <div class="form-group row">
         <div class="col-sm-2 col-form-label"><strong><i class="fas fa-user"></i> Guest</strong></div>
-        <div class="form-group col-md-4">
+
+        <!-- First name -->
+        <div class="md-form col-md-4">
+          <input type="text" id="form1" class="form-control" id="firstname">
           <label for="firstname">First name</label>
-          <input type="text" class="form-control" id="firstname" autocomplete="off" placeholder="First name"/>
         </div>
-        <div class="form-group col-md-2">
+        <!-- Preposition -->
+        <div class="md-form col-md-2">
+          <input type="text" id="form1" class="form-control" id="preposition">
           <label for="preposition">Preposition</label>
-          <input type="text" class="form-control" id="preposition" autocomplete="off" placeholder="Preposition"/>
         </div>
-        <div class="form-group col-md-4">
+        <!-- First name -->
+        <div class="md-form col-md-4">
+          <input type="text" id="form1" class="form-control" id="lastname">
           <label for="lastname">Last name</label>
-          <input type="text" class="form-control" id="lastname" autocomplete="off" placeholder="Last name"/>
         </div>
+
       </div>
       <div class="form-group row">
         <div class="col-sm-2 col-form-label"></div>
@@ -53,7 +58,7 @@
         </div>
         <div class="form-group col-md-2">
           <label for="table_select">Table</label>
-          <select multiple="multiple" class="form-control" id="table_select">
+          <select multiple="multiple" class="form-control browser-default" id="table_select">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
