Christoffel : reservations bugfix #3 -> comments martijn 24/01

--- a/templates/add-reservation.html
+++ b/templates/add-reservation.html
@@ -1,5 +1,5 @@
 <div>
-  <h3>Add Reservation</h3><hr />
+  <h3><span>Add Reservation</span></h3><hr />
     <form>
       <div class="form-group row">
          <div class="col-sm-2 col-form-label"><strong><i class="fas fa-user"></i> Guest</strong></div>
@@ -43,7 +43,7 @@
 
             <input type="text" class="form-control" id="time_arrival" autocomplete="off"  />
             <span class="input-group-append">
-                <a class="btn rounded-right datepickerbutton selectTime" role="button" tabindex="0" title="Kies tijd...">
+                <a class="btn rounded-right datepickerbutton selectTime" role="button" tabindex="0" title="Choose time...">
                     <i class="far fa-clock"></i>
                 </a>
             </span>
@@ -55,7 +55,7 @@
 
             <input type="text" class="form-control" id="time_depart" autocomplete="off"  />
             <span class="input-group-append">
-                <a class="btn rounded-right datepickerbutton selectTime" role="button" tabindex="0" title="Kies tijd...">
+                <a class="btn rounded-right datepickerbutton selectTime" role="button" tabindex="0" title="Choose time...">
                     <i class="far fa-clock"></i>
                 </a>
             </span>
