--- a/templates/edit-reservation.html
+++ b/templates/edit-reservation.html
@@ -1,4 +1,4 @@
-<h3>Edit Reservation</h3><hr />
+<h3><span>Edit Reservation</span></h3><hr />
   <form>
     <div class="form-group row">
       <div class="col-sm-2 col-form-label"><strong><i class="fas fa-user"></i> Guest</strong></div>
