--- a/templates/add-ingredient.html
+++ b/templates/add-ingredient.html
@@ -1,9 +1,7 @@
 <div>
   <h3>Add Ingredient</h3><hr />
     <form>
-      <div class="form-group row">
-        <div class="col-sm-2 col-form-label"><strong><i class="fas fa-archive"></i> Ingredient</strong></div>
-        <div class="form-group col-md-2">
+      <div class="form-group row"><div class="form-group col-md-2">
           <label for="name">Name</label>
           <input type="text" class="form-control" id="name" autocomplete="off" placeholder="Name"/>
         </div>
@@ -17,11 +15,11 @@
           <label for="unit">Unit</label>
           <input type="text" class="form-control" id="unit" autocomplete="off" placeholder="Unit"/>
         </div>
-        <div class="form-group col-md-3">
+        <div class="form-group col-md-4">
           <label for="category">Category</label>
           <input type="text" class="form-control" id="category" autocomplete="off" placeholder="Category"/>
         </div>
-        <div class="form-group col-md-3">
+        <div class="form-group col-md-4">
           <label for="allergies">Allergies</label>
           <input type="text" class="form-control" id="allergies" autocomplete="off" placeholder="Allergies"/>
         </div>
