Andries: bug fixes add reservation

--- a/templates/add-reservation.html
+++ b/templates/add-reservation.html
@@ -33,11 +33,11 @@
       <div class="form-group row" id="reservation" data-hidebefore="guest">
         <div class="col-sm-2 col-form-label"><strong><i class="far fa-calendar"></i> Reservation</strong></div>
 
-        <div class="form-group col-md-2">
+        <div class="form-group col-md-3">
           <label for="date">Date</label>
           <input type="text" class="form-control" id="date" autocomplete="off" />
         </div>
-        <div class="form-group col-md-2">
+        <div class="form-group col-md-3">
           <label for="time_arrival">Time Arrival</label>
           <div class="input-group bootstrap-timepicker timepicker">
 
@@ -49,7 +49,7 @@
             </span>
           </div>
         </div>
-        <div class="form-group col-md-2">
+        <div class="form-group col-md-3">
           <label for="time_depart">Time Depart</label>
           <div class="input-group bootstrap-timepicker timepicker">
 
@@ -61,7 +61,7 @@
             </span>
           </div>
         </div>
-        <div class="form-group col-md-2">
+        <div class="form-group col-md-2 offset-md-2">
           <label for="persons">Persons</label>
           <input type="number" class="form-control" id="persons" autocomplete="off" />
         </div>
