Christoffel: ingredient add/update bugfix

--- a/templates/add-ingredient.html
+++ b/templates/add-ingredient.html
@@ -21,8 +21,8 @@
         </div>
         <div class="form-group col-md-4">
           <label for="allergies">Allergies</label>
-          
-          <select  class="form-control" id="alergies">
+
+          <select  class="form-control" id="allergies">
             <option>Peanuts</option>
             <option>Nuts</option>
             <option>Shellfish</option>
