Christoffel: ingredient units

--- a/templates/edit-ingredient.html
+++ b/templates/edit-ingredient.html
@@ -14,7 +14,14 @@
         </div>
         <div class="form-group col-md-2">
           <label for="unit">Unit</label>
-          <input type="text" class="form-control" id="unit" autocomplete="off" placeholder="Unit"/>
+          <select id="unit"  class="form-control">
+            <option> piece (pcs)</option>
+            <option> miligram (mg)</option>
+            <option> gram (g)</option>
+            <option> pound (lb)</option>
+            <option> kilogram (kg)</option>
+            <option> liter (l)</option>
+          </select>
         </div>
         <div class="form-group col-md-4">
           <label for="category">Category</label>
@@ -22,7 +29,22 @@
         </div>
         <div class="form-group col-md-4">
           <label for="allergies">Allergies</label>
-          <input type="text" class="form-control" id="allergies" autocomplete="off" placeholder="Allergies"/>
+          <select  class="form-control" id="allergies">
+            <option>Peanuts</option>
+            <option>Nuts</option>
+            <option>Shellfish</option>
+            <option>Fish</option>
+            <option>Eggs</option>
+            <option>Milk</option>
+            <option>Gluten</option>
+            <option>Soya</option>
+            <option>Sesame seeds</option>
+            <option>Celery</option>
+            <option>Mustard</option>
+            <option>Lupin</option>
+            <option>Sulphur Dioxide</option>
+
+          </select>
         </div>
       </div>
       <div class="row" style="padding:10px;" id="add_options">
