--- a/templates/add-ingredient.html
+++ b/templates/add-ingredient.html
@@ -1,9 +1,22 @@
 <div>
   <h3>Add Ingredient</h3><hr />
     <form>
-      <div class="form-group row"><div class="form-group col-md-2">
+      <div class="form-group row">
+        <div class="col-sm-2 col-form-label"></div>
+        <div class="form-group col-md-8">
           <label for="name">Name</label>
           <input type="text" class="form-control" id="name" autocomplete="off" placeholder="Name"/>
+        </div>
+        <div class="form-group col-md-2">
+          <label for="unit">Unit</label>
+          <select id="unit">
+            <option> piece (pcs)</option>
+            <option> miligram (mg)</option>
+            <option> gram (g)</option>
+            <option> pound (lb)</option>
+            <option> kilogram (kg)</option>
+            <option> liter (l)</option>
+          </select>
         </div>
       </div>
       <div class="form-group row">
@@ -11,10 +24,7 @@
           <label for="price">Price per</label>
           <input type="number" step="0.01" class="form-control" id="price" autocomplete="off" placeholder="Price"/>
         </div>
-        <div class="form-group col-md-2">
-          <label for="unit">Unit</label>
-          <input type="text" class="form-control" id="unit" autocomplete="off" placeholder="Unit"/>
-        </div>
+
         <div class="form-group col-md-4">
           <label for="category">Category</label>
           <input type="text" class="form-control" id="category" autocomplete="off" placeholder="Category"/>
