--- a/templates/delete-reservation.html
+++ b/templates/delete-reservation.html
@@ -7,11 +7,14 @@
   <div class="card-body">
     Reservation for <strong id="guest"></strong>
     <p class="card-text" id="reservation"></p>
+    <p>
+      This action can't be undone. Are you sure?
+    </p>
+  </div>
+  </div>
 
-  </div>
-  </div>
 </div>
 
 <div class="row" style="padding:10px;" id="delete_options">
-  <button class="btn btn-primary "><i class="fas fa-minus-circle"></i> Delete Reservation</button> <a href="#reservations/overview" role="button" class="btn btn-light overview-link">Back to Overview</a>
+  <button class="btn btn-primary "><i class="fas fa-minus-circle"></i> Yes, Delete Reservation</button> <a href="#reservations/overview" role="button" class="btn btn-light overview-link">No, Back to Overview</a>
 </div>
