--- a/templates/delete-table.html
+++ b/templates/delete-table.html
@@ -1,5 +1,18 @@
 <h3>Delete Table <span class="delete_table_id"></h3><hr />
-<p>You're about to delete Table <span class="delete_table_id"></span>. This action can't be undone. Are you sure?</p>
+
+  <div class="row">
+
+    <div class="card">
+    <h5 class="card-header">Are you sure you want to delete table <span class="delete_table_id"></span>?</h5>
+    <div class="card-body">
+
+      <p>
+        This action can't be undone. Are you sure?
+      </p>
+    </div>
+    </div>
+
+  </div>
 
 <div class="row" style="padding-top:15px;" id="delete_options">
   <button class="btn btn-primary "><i class="fas fa-minus-circle"></i> Yes, delete Table <span class="delete_table_id"></button> <a href="#tables/overview" role="button" class="btn btn-light overview-link">No, back to Overview</a>
