--- a/templates/delete-ingredient.html
+++ b/templates/delete-ingredient.html
@@ -1,15 +1,18 @@
 <h3>Delete Ingredient</h3><hr />
 <div class="row">
   <div class="card">
-  <h5 class="card-header">Ingredient for </h5>
+  <h5 class="card-header">Are you sure you want to delete this Ingredient? </h5>
   <div class="card-body">
 
     <p class="card-text" id="ingredient"></p>
-
+    <p>
+    This action can't be undone. Are you sure?
+    </p>
   </div>
   </div>
 </div>
 
+
 <div class="row" style="padding:10px;" id="delete_options">
-  <button class="btn btn-primary "><i class="fas fa-minus-circle"></i> Delete Ingredient</button> <a href="#ingredients/overview" role="button" class="btn btn-light overview-link">Back to Overview</a>
+  <button class="btn btn-primary "><i class="fas fa-minus-circle"></i> Yes, Delete Ingredient</button> <a href="#ingredients/overview" role="button" class="btn btn-light overview-link">No, Back to Overview</a>
 </div>
